--- a/src/BackendBundle/Resources/config/routing/productBacklog.yml
+++ b/src/BackendBundle/Resources/config/routing/productBacklog.yml
@@ -72,3 +72,8 @@ backend_project_product_backlog_change_parent:
     path:     /changeParent
     defaults: { _controller: "BackendBundle:Item:changeParent" }
     methods:  [POST]
+    
+backend_project_product_backlog_copy_move_to_sprint:
+    path:     /{itemId}/copyMoveToSprint
+    defaults: { _controller: "BackendBundle:Item:copyMoveToSprint" }
+    methods:  [GET, POST]
