- Funcionalidad de Mover/Copiar ítems entre los proyectos asignados al usuario logueado - Mejoras funcionales en el Product Backlog - Corrección de error copiando y moviendo ítems de un Sprint a otro

--- a/src/BackendBundle/Resources/config/routing/productBacklog.yml
+++ b/src/BackendBundle/Resources/config/routing/productBacklog.yml
@@ -77,3 +77,8 @@ backend_project_product_backlog_copy_move_to_sprint:
     path:     /{itemId}/copyMoveToSprint
     defaults: { _controller: "BackendBundle:Item:copyMoveToSprint" }
     methods:  [GET, POST]
+
+backend_project_product_backlog_copy_move_to_project:
+    path:     /{itemId}/copyMoveToProject
+    defaults: { _controller: "BackendBundle:Item:copyMoveToProject" }
+    methods:  [GET, POST]
