--- a/src/BackendBundle/Resources/config/services.yml
+++ b/src/BackendBundle/Resources/config/services.yml
@@ -122,6 +122,15 @@ services:
         tags:
             - { name: form.type }
     
+    #servicio para formulario de mover items entre proyectos
+    backend.form.type.item_move_to_project:
+        class: BackendBundle\Form\MoveItemToProjectType
+        arguments:
+            - "@service_container"
+            - "@security.token_storage"
+        tags:
+            - { name: form.type }
+    
     #servicio para formulario de sprints de un proyecto
     backend.form.type.sprint:
         class: BackendBundle\Form\SprintType
