Internacionalización del Frontend (Español / Ingles)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,13 @@
 frontend:
     resource: "@FrontendBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /{_locale}
+
+frontend_redirect:
+    path: /
+    defaults:
+        _controller: FrontendBundle:Default:redirect
+        route: frontend_homepage
+        permanent: true
 
 backend:
     resource: "@BackendBundle/Resources/config/routing.yml"
