Avance en modulo "Time Tracking", se incluye librería FlipClock para el contador de tiempo dinámico

--- a/src/BackendBundle/Resources/config/services.yml
+++ b/src/BackendBundle/Resources/config/services.yml
@@ -134,3 +134,11 @@ services:
             - "@service_container"
         tags:
             - { name: form.type }
+            
+    #servicio para formulario de registro de tiempos
+    backend.form.type.time_tracking:
+        class: BackendBundle\Form\TimeTracking\TimeTrackType
+        arguments:
+            - "@service_container"
+        tags:
+            - { name: form.type }
