--- a/src/BackendBundle/Resources/config/routing/timeTracking.yml
+++ b/src/BackendBundle/Resources/config/routing/timeTracking.yml
@@ -2,10 +2,16 @@ backend_time_tracking:
     path:     /
     defaults: { _controller: BackendBundle:TimeTracking:index }
 
-#backend_notifications_accept:
-#    path:     /{id}/accept
-#    defaults: { _controller: BackendBundle:Notification:accept }
-#    
+backend_time_tracking_start_time:
+    path:     /startTime
+    defaults: { _controller: BackendBundle:TimeTracking:startTime }
+    methods: [POST]
+    
+backend_time_tracking_get_project_items:
+    path:     /getProjectItems
+    defaults: { _controller: BackendBundle:TimeTracking:getProjectItems }
+    methods: [POST]
+    
 #backend_notifications_reject:
 #    path:     /reject
 #    defaults: { _controller: BackendBundle:Notification:reject }
