--- a/src/BackendBundle/Resources/config/routing/timeTracking.yml
+++ b/src/BackendBundle/Resources/config/routing/timeTracking.yml
@@ -7,11 +7,17 @@ backend_time_tracking_start_time:
     defaults: { _controller: BackendBundle:TimeTracking:startTime }
     methods: [POST]
     
+backend_time_tracking_stop_time:
+    path:     /stopTime
+    defaults: { _controller: BackendBundle:TimeTracking:stopTime }
+    methods: [POST]
+    
 backend_time_tracking_get_project_items:
     path:     /getProjectItems
     defaults: { _controller: BackendBundle:TimeTracking:getProjectItems }
     methods: [POST]
     
-#backend_notifications_reject:
-#    path:     /reject
-#    defaults: { _controller: BackendBundle:Notification:reject }
+backend_time_update_time_tracking_list:
+    path:     /updateTimeTrackingList
+    defaults: { _controller: BackendBundle:TimeTracking:updateTimeTrackingList }
+    methods: [POST]
