--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,6 +40,7 @@ framework:
 twig:
     globals:
         app_settings: "@app_settings"
+        time_tracker: "@time_tracker"
         item_attachments_folder: "%item_attachments_folder%"
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
