--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,8 +2,8 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-    - { resource: "@BackendBundle/Resources/config/services.yml" }
-    - { resource: "@FrontendBundle/Resources/config/services.yml" }
+    - { resource: '@BackendBundle/Resources/config/services.yml' }
+    - { resource: '@FrontendBundle/Resources/config/services.yml' }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -39,8 +39,7 @@ framework:
 # Twig Configuration
 twig:
     globals:
-        app_settings: "@app_settings"
-        time_tracker: "@time_tracker"
+        app_settings: '@app_settings'
         item_attachments_folder: "%item_attachments_folder%"
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
@@ -100,3 +99,15 @@ knp_paginator:
     template:
         pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig     # sliding pagination controls template
         sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+
+# PDF Generator
+# app/config/config.yml
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     "\"C:\\Program Files (x86)\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
+        options:    []
+    image:
+        enabled:    true
+        binary:     "\"C:\\Program Files (x86)\\wkhtmltopdf\\bin\\wkhtmltoimage.exe\""
+        options:    []
