Funcionalidad de editar tiempos en el modulo Time Tracking

--- a/src/BackendBundle/Resources/config/routing/timeTracking.yml
+++ b/src/BackendBundle/Resources/config/routing/timeTracking.yml
@@ -17,6 +17,11 @@ backend_time_tracking_delete_time:
     defaults: { _controller: BackendBundle:TimeTracking:deleteTime }
     methods: [POST]
     
+backend_time_tracking_edit_time:
+    path:     /editTime
+    defaults: { _controller: BackendBundle:TimeTracking:editTime }
+    methods: [POST]
+    
 backend_time_tracking_get_project_items:
     path:     /getProjectItems
     defaults: { _controller: BackendBundle:TimeTracking:getProjectItems }
